fix: step types with the uses for javascript

--- a/.github/workflows/02-step-types.yaml
+++ b/.github/workflows/02-step-types.yaml
@@ -17,6 +17,6 @@ jobs:
  say-hello-action:
   runs-on: ubuntu-24.04
   steps:
-    - uses: actions/hello-world-javascript-action
+    - uses: actions/hello-world-javascript-action@081a6d193d1dcb38460df1e6927486d748730f9d # v1.1
       with:
         who-to-greet: "World"
