--- a/.github/workflows/03-workflow-jobs-steps.yaml
+++ b/.github/workflows/03-workflow-jobs-steps.yaml
@@ -6,7 +6,7 @@ jobs:
   job-1:
     runs-on: ubuntu-24.04
     steps:
-        run: |
+      - run: |
           echo " A job consists of one or more steps \n"
           echo " which run sequentially within the \n"
           echo " same compute environment"
@@ -14,8 +14,8 @@ jobs:
   job-2:
     runs-on: ubuntu-24.04
     steps:
-      run: |
-        echo "Multiple jobs can run in parallel"
+      - run: |
+          echo "Multiple jobs can run in parallel"
   
   job-3:
     runs-on: ubuntu-24.04
@@ -23,8 +23,8 @@ jobs:
       - job-1
       - job-2
     steps:
-      run: |
-        echo "They can also depend on one another.."
+      - run: |
+          echo "They can also depend on one another.."
   
   job-4:
     runs-on: ubuntu-24.04
@@ -32,5 +32,5 @@ jobs:
      - job-2
      - job-3
     steps:
-      run: |
-        echo "..to form a directed acyclic graph (DAG)"
+      - run: |
+          echo "..to form a directed acyclic graph (DAG)"
